--- a/.config/sway/config
+++ b/.config/sway/config
@@ -54,7 +54,7 @@ bindsym $mod+x exec $locker, mode "default"
 # Example configuration:
 #
 input * {
-    xkb_layout "de,us"
+    xkb_layout "us(altgr-intl),de"
     # xkb_variant "colemak,,typewriter"
     xkb_options "grp:win_space_toggle"
 }
