--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,3 +5,6 @@ bind-key -T copy-mode y send -X copy-pipe-and-cancel 'xclip -in -selection clipb
 bind-key -T copy-mode-vi v send -X begin-selection
 bind-key -T copy-mode-vi V send -X select-line 
 bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+bind  c  new-window      -c "#{pane_current_path}"
+bind  %  split-window -h -c "#{pane_current_path}"
+bind '"' split-window -v -c "#{pane_current_path}"
